...
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GWP-Tq-Nz4">
                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nt5-lk-AhU" userLabel="Content View">
                                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6MY-lh-ri6" userLabel="Digital Leash">
                                                <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
                                                <color key="backgroundColor" red="0.0039215686274509803" green="0.18823529411764706" blue="0.20392156862745098" alpha="1" colorSpace="calibratedRGB"/>
                                                <string key="text">Digital Leash
</string>
                                                <fontDescription key="fontDescription" type="system" pointSize="37"/>
                                                <color key="textColor" red="0.33725490196078434" green="0.52549019607843139" blue="0.54117647058823526" alpha="1" colorSpace="calibratedRGB"/>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Latitude, Longitude" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="lbz-Rj-ImJ">
                                                <rect key="frame" x="218" y="153" width="165" height="23"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                <color key="textColor" red="0.88235294119999996" green="0.85098039219999999" blue="0.67450980390000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iT4-0z-wUk">
                                                <rect key="frame" x="150" y="257" width="300" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                                <connections>
                                                    <action selector="textFieldChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="WLI-6g-jlL"/>
                                                </connections>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set Radius" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="cYe-AS-BxW">
                                                <rect key="frame" x="255" y="320" width="91" height="23"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="radius" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dsz-L8-L8D">
                                                <rect key="frame" x="210" y="351" width="180" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
                                                <connections>
                                                    <action selector="textFieldChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="FHz-1r-Krn"/>
                                                </connections>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PlH-Yo-5ej">
                                                <rect key="frame" x="0.0" y="540" width="600" height="60"/>
                                                <color key="backgroundColor" red="0.40784313725490196" green="0.59215686274509804" blue="0.60784313725490191" alpha="1" colorSpace="calibratedRGB"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
                                                <state key="normal" title="Submit">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
                                                <state key="disabled">
                                                    <color key="titleColor" red="0.38281700433480187" green="0.60002366962952758" blue="0.61720722853535359" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <connections>
...
